RESOLVED FIXED100554
Crash in WebProces at WebCore::ResourceLoadScheduler::crossOriginRedirectReceived + 78
https://bugs.webkit.org/show_bug.cgi?id=100554
Summary Crash in WebProces at WebCore::ResourceLoadScheduler::crossOriginRedirectRece...
Brady Eidson
Reported 2012-10-26 12:57:35 PDT
Crash in WebProces at WebCore::ResourceLoadScheduler::crossOriginRedirectReceived Caused by http://trac.webkit.org/changeset/132501 I missed a few call sites to resourceLoadScheduler(), leading to *two* resourceLoadSchedulers being created. This caused hosts to get out of sink. I have a fix coming that will prevent the same mistake from happening in the future. In radar as <rdar://problem/12575514>
Attachments
Patch v1 (10.31 KB, patch)
2012-10-26 14:11 PDT, Brady Eidson
ap: review+
Brady Eidson
Comment 1 2012-10-26 14:11:23 PDT
Created attachment 171002 [details] Patch v1
Brady Eidson
Comment 2 2012-10-26 14:30:48 PDT
Brady Eidson
Comment 3 2012-10-26 14:51:16 PDT
This fix is incomplete as-is
Roger Fong
Comment 4 2012-10-26 16:37:41 PDT
It would seem that after this patch, every test bot's layout tests started timing out and exiting early after 20 timeouts
Andy Estes
Comment 5 2012-10-26 17:00:42 PDT
As Roger said, this caused every test to crash. Patch was rolled out in <http://trac.webkit.org/changeset/132712>.
Brady Eidson
Comment 6 2012-10-26 18:02:04 PDT
Decided on a stop gap fix to plug the crashes for now. Alexey reviewed in person. http://trac.webkit.org/changeset/132714
Note You need to log in before you can comment on or make changes to this bug.