Source/WebCore/loader/cache/CachedResource.cpp
@@ -36,9 +36,7 @@
 #include "FrameLoaderClient.h"
 #include "InspectorInstrumentation.h"
 #include "KURL.h"
-#include "LoaderStrategy.h"
 #include "Logging.h"
-#include "PlatformStrategies.h"
 #include "PurgeableBuffer.h"
 #include "ResourceBuffer.h"
 #include "ResourceHandle.h"
@@ -285,11 +283,7 @@ void CachedResource::load(CachedResourceLoader* cachedResourceLoader, const Reso
     if (type() != MainResource)
         addAdditionalRequestHeaders(cachedResourceLoader);
 
-#if USE(PLATFORM_STRATEGIES)
-    m_loader = platformStrategies()->loaderStrategy()->resourceLoadScheduler()->scheduleSubresourceLoad(cachedResourceLoader->frame(), this, m_resourceRequest, m_resourceRequest.priority(), options);
-#else
     m_loader = resourceLoadScheduler()->scheduleSubresourceLoad(cachedResourceLoader->frame(), this, m_resourceRequest, m_resourceRequest.priority(), options);
-#endif
 
     if (!m_loader) {
         failBeforeStarting();
